# SA

./: Dockerfile.build  LICENSE  MOCK_PROVIDER_README.md  README.md  build_alma.sh  build_and_upload.sh  build_binary.sh  download_sa.php  ideas.txt  install.sh  out.html  pyproject.toml  requirements.txt  requirements_minimal.txt  sa-installer  sa-shell  setup.py  startup.py  test_overlapping.py  todo.txt
alma-build-1756903003/: build.sh  requirements.txt
alma-build-1756903003/core/: __init__.py
alma-build-1756903003/query_language/: README.md  execute.py  main.py  parser.py  render.py
alma-build-1756903027/: build.sh  transfer_and_build.sh
alma-build-1756903027/core/: types.py
alma-build-1756903027/query_language/: object_list.py  operators.py
alma-build-1756903027/shell/: shell.py
flask_providers/: __init__.py  mock_provider.py  providers.txt  requirements.txt  simple_mock_provider.py
flask_providers/resources/: simple_objects.json
performance_tests/: README.md  debug_performance.py  quick_perf_test.py
sa/: __init__.py  __main__.py
sa/core/: __init__.py  caches.py  object_grouping.py  object_list.py  sa_object.py  sa_types.py  scope.py  types.py
sa/query_language/: __init__.py  argument_parser.py  chain.py  debug.py  errors.py  execute.py  main.py  operators.py  parser.py  query_scope.py  query_state.py  render.py  scopes.py  types.py  utils.py  validators.py
sa/query_language/operators/: __init__.py  analysis.py  comparison.py  slice.py  (+5 more)
sa/shell/: __init__.py  __main__.py  provider_manager.py  shell.py
sap/: README.md  cli.py  example_provider.py  models.py  scheduler.py  server.py  types.py
scripts/: build_and_upload.sh  build_binary.sh  startup.py
tests/: test_group_by_id_types_performance.py  test_grouping_correctness.py  test_parse_tokens.py  test_sa_object.py  test_token_arguments.py  test_tokenizer.py
tests/system/: test_providers_overlapping.py
